@@ -8,6 +8,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   copying the symlink and then not preserving its timestamp.
   [bug introduced in coreutils-8.0]
 
+  cp now avoids FIEMAP issues with BTRFS before Linux 2.6.38,
+  which could result in corrupt copies of sparse files.
+  [bug introduced in coreutils-8.10]
+
   cut could segfault when invoked with a user-specified output
   delimiter and an unbounded range like "-f1234567890-".
   [bug introduced in coreutils-5.3.0]
